syntax = "proto3";

package go.micro.srv.GetUserHouses;

service GetUserHouses {
	rpc GetUserHouses(Request) returns (Response) {}
}

message Request {
	string SessionId = 1;
}

message Response {
	string ErrNo = 1;
	string ErrMsg = 2;
	bytes Data = 3;
}
